--- a/RemoteLogCore/RemoteLogCore.csproj
+++ b/RemoteLogCore/RemoteLogCore.csproj
@@ -72,6 +72,7 @@
     <Compile Include="RLSettings.cs" />
     <Compile Include="ServiceConnector.cs" />
     <Compile Include="UnhandledExceptionKillApp.cs" />
+    <Compile Include="WPLog.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.CSharp.targets" />
