--- a/RemoteLogCore/RemoteLogCore.csproj
+++ b/RemoteLogCore/RemoteLogCore.csproj
@@ -41,6 +41,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Coding4Fun.Phone.Controls">
+      <HintPath>..\..\..\..\libraries\winphone\Coding4Fun\Coding4Fun.Phone.Controls.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\..\..\libraries\net\Json.NET\Bin\WindowsPhone\Signed\Newtonsoft.Json.dll</HintPath>
