--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
 packages
 Bin
 obj
-RemoteLogDemo
+/RemoteLogDemo
+/RemoteLogDemo/*
 /RemoteLogLibrary.v11.suo
 /RemoteLogLibrary.sln
 *.user
 *.csproj
-RemoteLogLibrary
 *.csproj
 *.user
-*.user
-*.csproj
-RemoteLogDemo
-RemoteLogDemo
+/RemoteLogDemo
